[gd_scene load_steps=5 format=2]

[ext_resource path="res://World/Hut Red.png" type="Texture" id=1]
[ext_resource path="res://World/DoorZone.gd" type="Script" id=2]
[ext_resource path="res://World/Building.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 12 )

[node name="Buiding" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -45 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -4 )
scale = Vector2( 1, 0.953345 )
build_mode = 1
polygon = PoolVector2Array( -71, 0, -19.235, 0, -18, -33.2448, 18, -33.2448, 18.8626, 0, 71, 0, 62, -71, -62, -71 )

[node name="DoorZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorZone"]
position = Vector2( 0, -24 )
shape = SubResource( 1 )
[connection signal="body_entered" from="DoorZone" to="DoorZone" method="_on_DoorZone_body_entered"]
[connection signal="body_exited" from="DoorZone" to="DoorZone" method="_on_DoorZone_body_exited"]
[connection signal="zone_entered" from="DoorZone" to="." method="_on_DoorZone_zone_entered"]
[connection signal="zone_exited" from="DoorZone" to="." method="_on_DoorZone_zone_exited"]
